--- a/src/style.scss
+++ b/src/style.scss
@@ -8,6 +8,42 @@ body {
   padding: 0;
 }
 
+@keyframes show-box {
+    0%, 100% {
+      visibility: visible;
+      opacity: 0;
+      transform: translateY(-200%);
+    }
+    20%, 80%{
+      transform: translateY(20%);
+      opacity: 1;
+    }
+
+    30%, 70% {
+      transform: translateY(0);
+    }
+}
+
+
+#alert-box {
+  padding: 12px 24px;
+  position: fixed;
+  background-color: $color3;
+  border: 2px solid $color2;
+  color: $color2;
+  font-family: 'Poppins', 'Trebuchet MS', 'Lucida Sans Unicode',
+  'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  border-radius: 12px;
+  left: 4vw;
+  top: 4vh;
+  opacity: 0;
+  visibility: hidden;
+
+  &.visible-box {
+    animation: show-box 3s ease-in-out;
+  }
+}
+
 #content {
   width: 100vw;
   height: 100vh;
@@ -41,6 +77,12 @@ body {
     background-color: rgba($color: #9a9a9a, $alpha: 0.1);
     border-radius: 12px;
     font-size: clamp(16px, 4vw, 24px);
+    span {
+      font-weight: bold;
+      font-size: 2.5em;
+      color: $color2;
+      font-weight: 500;
+    }
     .wind, .temperature {
       display: flex;
       flex-direction: column;
@@ -59,20 +101,40 @@ body {
         width: max-content;
         filter: invert(0.5);
       }
-      span {
-        font-weight: bold;
-        font-size: 2.5em;
-        color: $color2;
-        font-weight: 500;
-      }
     }
 
-    .location {
-      font-size: clamp(10px ,5vw ,60px);
-      padding: 6px;
+    .middle-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-self: stretch;
+      .location {
+        justify-self: flex-start;
+        
+      }
+      #city {
+        font-size: clamp(10px ,5vw ,60px);
+        padding: 6px;
+        line-height: 50px;
+      }
+
       #country {
         font-size: 16px;
         font-weight: 100;
+        line-height: 0;
+      }
+
+      .humidity {
+        color: $color1;
+        // margin-top: auto;
+        justify-self: center;
+        align-self: center;
+        padding: 12px;
+        border-radius: 12px;
+        font-size: 0.7em;
+        font-weight: 100;
+        line-height: 2em;
+        background-color: rgba($color: #8f8f8f, $alpha: 0.1);
       }
     }
     
@@ -124,6 +186,26 @@ body {
         font-size: 16px;
         color: rgba($color2, $alpha: 0.8);
         font-family:Verdana, Geneva, Tahoma, sans-serif;
+      }
+    }
+
+    #unit {
+      border: none;
+      background-color: $color1;
+      color: $color3;
+      font-family: inherit;
+      font-size: 1em;
+      border-radius: 50%;
+      height: 40px;
+      width: 40px;
+      transition: all 0.2s ease-in-out;
+      box-sizing: border-box;
+      box-shadow: 0 0 12px;
+      &:hover {
+        filter: brightness(1.3);
+      }
+      &:active {
+        background-color: $color2;
       }
     }
   }
