--- a/src/style.scss
+++ b/src/style.scss
@@ -110,23 +110,23 @@ body {
       align-self: stretch;
       .location {
         justify-self: flex-start;
-        
+        flex:1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;        
       }
       #city {
-        font-size: clamp(10px ,5vw ,60px);
-        padding: 6px;
-        line-height: 50px;
+        font-size: clamp(10px ,5vw ,50px);
+        padding: 0 6px;
       }
 
       #country {
-        font-size: 16px;
+        font-size: clamp(10px ,4vw ,16px);
         font-weight: 100;
-        line-height: 0;
       }
 
       .humidity {
         color: $color1;
-        // margin-top: auto;
         justify-self: center;
         align-self: center;
         padding: 12px;
@@ -135,6 +135,9 @@ body {
         font-weight: 100;
         line-height: 2em;
         background-color: rgba($color: #8f8f8f, $alpha: 0.1);
+        >span:last-of-type {
+          font-size: 1.5em;
+        }
       }
     }
     
@@ -202,10 +205,12 @@ body {
       box-sizing: border-box;
       box-shadow: 0 0 12px;
       &:hover {
-        filter: brightness(1.3);
+        background-color: $color2;
       }
       &:active {
-        background-color: $color2;
+        background-color: $color3;
+        color: $color1;
+
       }
     }
   }
