--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 $color1: #334155;
 $color2: #64748b;
 $color3: #cbd5e1;
+$accent: #334155;
 @import url('https://fonts.googleapis.com/css2?family=Coda&family=Oleo+Script&family=Poppins:wght@100;500;900&display=swap');
 
 body {
@@ -47,7 +48,7 @@ body {
 #content {
   width: 100vw;
   height: 100vh;
-  color: $color1;
+  color: $color3;
   font-family:'Poppins', 'Trebuchet MS', 'Lucida Sans Unicode',
     'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-align: center;
@@ -56,10 +57,14 @@ body {
   justify-content: space-evenly;
   align-items: center;
 
+  background-size: cover;
+
+
   .state {
+    color: $color3;
     font-size: 100px;
     font-weight: bold;
-    font-family: 'Oleo Script', cursive;
+    font-family: 'Oleo Script', cursive, sans-serif;
     #state-desc {
       font-size: 0.2em;
       font-weight: 100;
@@ -68,19 +73,19 @@ body {
   }
 
   .info {
+    background-size: cover;
     max-width: 95vw;
     width: clamp(100px, 90%, 650px);
     display: flex;
     justify-content:space-around;
     align-items: center;
     padding: 24px 16px;
-    background-color: rgba($color: #9a9a9a, $alpha: 0.1);
+    background-color: rgba($color: $accent, $alpha: 0.5);
     border-radius: 12px;
     font-size: clamp(16px, 4vw, 24px);
     span {
       font-weight: bold;
       font-size: 2.5em;
-      color: $color2;
       font-weight: 500;
     }
     .wind, .temperature {
@@ -89,10 +94,9 @@ body {
       justify-content: center;
       align-items: center;
       gap: 24px;
-      color: $color1;
       line-height: 2em;
       font-size: 0.7em;
-      background-color: rgba($color: #8f8f8f, $alpha: 0.1);
+      background-color: rgba($color: $accent, $alpha: 0.5);
       padding: 12px;
       border-radius: 12px;
       font-weight: 100;
@@ -122,11 +126,10 @@ body {
 
       #country {
         font-size: clamp(10px ,4vw ,16px);
-        font-weight: 100;
       }
 
       .humidity {
-        color: $color1;
+        color: $color3;
         justify-self: center;
         align-self: center;
         padding: 12px;
@@ -134,7 +137,7 @@ body {
         font-size: 0.7em;
         font-weight: 100;
         line-height: 2em;
-        background-color: rgba($color: #8f8f8f, $alpha: 0.1);
+        background-color: rgba($color: $accent, $alpha: 0.5);
         >span:last-of-type {
           font-size: 1.5em;
         }
@@ -147,7 +150,7 @@ body {
   .search-container {
     display: flex;
     gap: 16px;
-    background-color: rgba($color: #8f8f8f, $alpha: 0.1);
+    background-color: rgba($color: $accent, $alpha: 0.5);
     padding: 16px;
     border-radius: 12px;
     align-items: center;
@@ -164,7 +167,7 @@ body {
       border: 1px solid $color3;
       
       &:hover {
-        background-color: rgba($color: #818181, $alpha: 0.1);
+        background-color: rgba($color: $accent, $alpha: 0.1);
         border: 1px solid $color2;
       }
 
@@ -203,7 +206,6 @@ body {
       width: 40px;
       transition: all 0.2s ease-in-out;
       box-sizing: border-box;
-      box-shadow: 0 0 12px;
       &:hover {
         background-color: $color2;
       }
